--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -24,7 +24,8 @@
       "height": 500,
       "minWidth": 400,
       "minHeight": 300,
-      "icon": "/vue-src/public/vite.svg"
+      "icon": "/vue-src/public/vite.svg",
+      "enableInspector": true
     }
   },
   "cli": {
