--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -25,23 +25,21 @@
       "minWidth": 400,
       "minHeight": 300,
       "icon": "/vue-src/public/vite.svg",
-      "enableInspector": true
+      "enableInspector": false
     }
   },
   "cli": {
     "binaryName": "vue",
     "resourcesPath": "/vue-src/dist/",
     "extensionsPath": "/extensions/",
-    "binaryVersion": "6.0.0",
-    "clientVersion": "6.0.0",
     "frontendLibrary": {
       "patchFile": "/vue-src/index.html",
       "devUrl": "http://localhost:5173",
       "projectPath": "/vue-src/",
       "initCommand": "npm install",
-      "devCommand": "npm run dev",
+      "devCommand": "BROWSER=none npm run dev",
       "buildCommand": "npm run build",
-      "waitTimeout": 20000
+      "waitTimeout": 5000
     }
   }
 }
