--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -40,6 +40,7 @@
       "devCommand": "BROWSER=none npm run dev",
       "buildCommand": "npm run build",
       "waitTimeout": 5000
-    }
+    },
+    "binaryVersion": "6.0.0"
   }
 }
